syntax = "proto3";

package gastrolog.v1;

option go_package = "gastrolog/api/gen/gastrolog/v1;gastrologv1";

import "google/protobuf/timestamp.proto";

// VaultService provides vault and chunk management.
service VaultService {
  // ListVaults returns all registered vaults.
  rpc ListVaults(ListVaultsRequest) returns (ListVaultsResponse);

  // GetVault returns details for a specific vault.
  rpc GetVault(GetVaultRequest) returns (GetVaultResponse);

  // ListChunks returns all chunks in a vault.
  rpc ListChunks(ListChunksRequest) returns (ListChunksResponse);

  // GetChunk returns details for a specific chunk.
  rpc GetChunk(GetChunkRequest) returns (GetChunkResponse);

  // GetIndexes returns index status for a chunk.
  rpc GetIndexes(GetIndexesRequest) returns (GetIndexesResponse);

  // AnalyzeChunk returns detailed index analysis for a chunk.
  rpc AnalyzeChunk(AnalyzeChunkRequest) returns (AnalyzeChunkResponse);

  // GetStats returns overall statistics for a vault.
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);

  // ReindexVault rebuilds all indexes for sealed chunks in a vault.
  rpc ReindexVault(ReindexVaultRequest) returns (ReindexVaultResponse);

  // ValidateVault checks chunk and index integrity for a vault.
  rpc ValidateVault(ValidateVaultRequest) returns (ValidateVaultResponse);

  // MigrateVault moves a vault to a new name, type, and/or location.
  // Three-phase: create destination, freeze source, async merge+delete.
  rpc MigrateVault(MigrateVaultRequest) returns (MigrateVaultResponse);

  // ExportVault streams all records from a vault for backup.
  rpc ExportVault(ExportVaultRequest) returns (stream ExportVaultResponse);

  // ImportRecords appends a batch of records to a vault.
  rpc ImportRecords(ImportRecordsRequest) returns (ImportRecordsResponse);

  // MergeVaults copies all records from a source vault into a destination vault,
  // then deletes the source.
  rpc MergeVaults(MergeVaultsRequest) returns (MergeVaultsResponse);

  // SealVault seals the active chunk of a vault.
  rpc SealVault(SealVaultRequest) returns (SealVaultResponse);
}

message ListVaultsRequest {}

message ListVaultsResponse {
  repeated VaultInfo vaults = 1;
}

message VaultInfo {
  string id = 1;
  string type = 2;
  string filter = 3;
  int64 chunk_count = 4;
  int64 record_count = 5;
  bool enabled = 6;
  string name = 7;
}

message GetVaultRequest {
  string id = 1;
}

message GetVaultResponse {
  VaultInfo vault = 1;
}

message ListChunksRequest {
  string vault = 1;
}

message ListChunksResponse {
  repeated ChunkMeta chunks = 1;
}

message ChunkMeta {
  string id = 1;
  google.protobuf.Timestamp start_ts = 2;
  google.protobuf.Timestamp end_ts = 3;
  bool sealed = 4;
  int64 record_count = 5;
  int64 bytes = 6;
  bool compressed = 7;    // true if raw.log/attr.log are compressed
  int64 disk_bytes = 8;   // actual on-disk size (may differ from bytes if compressed)
}

message GetChunkRequest {
  string vault = 1;
  string chunk_id = 2;
}

message GetChunkResponse {
  ChunkMeta chunk = 1;
}

message GetIndexesRequest {
  string vault = 1;
  string chunk_id = 2;
}

message GetIndexesResponse {
  bool sealed = 1;
  repeated IndexInfo indexes = 2;
}

message IndexInfo {
  string name = 1;
  bool exists = 2;
  int64 entry_count = 3;
  int64 size_bytes = 4;
}

message AnalyzeChunkRequest {
  string vault = 1;
  string chunk_id = 2; // If empty, analyze all chunks
}

message AnalyzeChunkResponse {
  repeated ChunkAnalysis analyses = 1;
}

message ChunkAnalysis {
  string chunk_id = 1;
  bool sealed = 2;
  int64 record_count = 3;
  repeated IndexAnalysis indexes = 4;
}

message IndexAnalysis {
  string name = 1;
  bool complete = 2;
  string status = 3; // "ok", "missing", "incomplete", "capped"
  int64 entry_count = 4;
  double coverage = 5; // 0.0 to 1.0
  map<string, string> details = 6;
}

message GetStatsRequest {
  string vault = 1; // If empty, aggregate across all vaults
}

message GetStatsResponse {
  int64 total_vaults = 1;
  int64 total_chunks = 2;
  int64 sealed_chunks = 3;
  int64 total_records = 4;
  int64 total_bytes = 5;
  google.protobuf.Timestamp oldest_record = 6;
  google.protobuf.Timestamp newest_record = 7;
  repeated VaultStats vault_stats = 8;
  double process_cpu_percent = 9;            // CPU usage as percentage (0-100+)
  int64 process_memory_bytes = 10;           // Summary: HeapInuse + StackInuse
  ProcessMemoryStats process_memory_stats = 11;
}

// ProcessMemoryStats provides detailed memory breakdown from the Go runtime.
message ProcessMemoryStats {
  int64 rss_bytes = 1;            // Peak RSS from OS (getrusage Maxrss)
  int64 heap_alloc_bytes = 2;     // Live heap object bytes
  int64 heap_inuse_bytes = 3;     // In-use heap span bytes
  int64 heap_idle_bytes = 4;      // Idle (unused) heap span bytes
  int64 heap_released_bytes = 5;  // Heap bytes released to OS
  int64 stack_inuse_bytes = 6;    // Stack span bytes
  int64 sys_bytes = 7;            // Total virtual memory from OS
  uint64 heap_objects = 8;        // Number of live heap objects
  uint32 num_gc = 9;              // Completed GC cycles
}

// VaultStats provides per-vault statistics.
message VaultStats {
  string id = 1;
  string type = 2;
  int64 chunk_count = 3;
  int64 sealed_chunks = 4;
  int64 active_chunks = 5;
  int64 record_count = 6;
  int64 data_bytes = 7;
  int64 index_bytes = 8;
  google.protobuf.Timestamp oldest_record = 9;
  google.protobuf.Timestamp newest_record = 10;
  bool enabled = 11;
  string name = 12;
}

message ReindexVaultRequest {
  string vault = 1;
}

message ReindexVaultResponse {
  string job_id = 4;
}

message ValidateVaultRequest {
  string vault = 1;
}

message ValidateVaultResponse {
  bool valid = 1;
  repeated ChunkValidation chunks = 2;
}

message ChunkValidation {
  string chunk_id = 1;
  bool valid = 2;
  repeated string issues = 3;
}

// MigrateVault moves a vault to a new name, type, and/or location.
// Three-phase: create destination, freeze source, async merge+delete.
message MigrateVaultRequest {
  string source = 1;
  string destination = 2;
  // Optional: if empty, uses the same type as the source vault.
  string destination_type = 3;
  map<string, string> destination_params = 4;
}

message MigrateVaultResponse {
  string job_id = 3;
}

// ExportVault streams all records from a vault.
message ExportVaultRequest {
  string vault = 1;
}

message ExportVaultResponse {
  repeated ExportRecord records = 1;
  bool has_more = 2;
}

// ExportRecord is a portable record representation for export/import.
message ExportRecord {
  google.protobuf.Timestamp source_ts = 1;
  google.protobuf.Timestamp ingest_ts = 2;
  map<string, string> attrs = 3;
  bytes raw = 4;
}

// ImportRecords appends a batch of records to a vault.
message ImportRecordsRequest {
  string vault = 1;
  repeated ExportRecord records = 2;
}

message ImportRecordsResponse {
  int64 records_imported = 1;
}

message MergeVaultsRequest {
  string source = 1;
  string destination = 2;
}

message MergeVaultsResponse {
  string job_id = 3;
}

message SealVaultRequest {
  string vault = 1;
}

message SealVaultResponse {}
